[package]
authors = ["Jacob Jackson <jacobbfjackson@gmail.com>"]
name = "mcts"
version = "0.3.0"
description = "This is a library for Monte Carlo tree search."
repository = "https://github.com/zxqfl/mcts"
readme = "README.md"
keywords = ["monte", "carlo", "tree", "search", "ai"]
categories = ["algorithms"]
license = "MIT"

[dependencies]
crossbeam = "0.8.2"
rand = "0.8.5"
rand_xorshift = "0.3.0"
smallvec = "1.9.0"
